--- a/css/formcalc.css
+++ b/css/formcalc.css
@@ -1,16 +1,16 @@
 
-#block1 {
-    padding: 0 30px 0 0;
-    width: 10%;
-    display: inline-block;
-    vertical-align: top;
-}
-#block1 h3 {
-    padding: 11px 0 0px 0;
-    float: none;
-}
+/*#block1 {*/
+    /*padding: 0 30px 0 0;*/
+    /*width: 10%;*/
+    /*display: inline-block;*/
+    /*vertical-align: top;*/
+/*}*/
+/*#block1 h3 {*/
+    /*padding: 11px 0 0px 0;*/
+    /*float: none;*/
+/*}*/
 #block2 {
-    width: 52%;
+    width: 65%;
     display: inline-block;
     vertical-align: top;
 }
@@ -108,9 +108,11 @@
     border-radius: 10px;
 }
 h3  {
+    max-width: 100px;
     color: #774eb7;
     float: left;
-    margin: 56px 0 0 0;
+    margin: 50px 0 0 0;
+    padding: 0 60px 0 0;
 }
 
 .block-bed-label {
@@ -174,4 +176,62 @@ h3  {
     color: red;
     /*font-family: 'Lato', sans-serif;*/
     font-size: 15px;
+}
+@media all and (max-width: 1024px) {
+    #block2 {
+        width: 100%;
+    }
+    .price-off {
+        width: 100%;
+        padding: 40px 0 0 0;
+        color: #774eb7;
+    }
+}
+@media  all and (max-width: 768px) {
+
+    #block2 {
+        width: 82%;
+    }
+    .calc-rooms {
+        width: 100%;
+        padding: 0 0 0 20px;
+        float: left;
+    }
+    h3 {
+        padding: 0 60px 0 30px;
+        max-width: 100%;
+    }
+    .calc-dirty {
+        float: left;
+        width: 100%;
+        padding: 0 0 0 20px;
+    }
+    .calc-clean {
+        width: 100%;
+        float: left;
+        padding: 0 0 0 20px;
+    }
+}
+@media all and (max-width: 425px) {
+    #block1 {
+        width: 20%;
+        padding: 0 31px 0 25px;
+    }
+    #block2 {
+        width: 65%;
+    }
+    #block1 h3 {
+        padding: 0 0 290px 0;
+        float: none;
+    }
+
+}
+@media all and (max-width: 425px) {
+    .cost-money {
+        padding: 30px 0 0 0;
+
+    }
+    #cost {
+        padding: 30px 0 0 0;
+    }
 }
