--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ body.scroll {
     position: relative;
 }
 .red-queen:hover .overlay {
-    opacity: 0.8;
+    opacity: 0.94;
 
 }
 
@@ -411,9 +411,11 @@ a:focus {
 .book-item {
     position: relative;
     vertical-align: top;
-    text-align: center;
-    display: inline-block;
-    padding: 28px 19px 0 19px;
+    /*text-align: center;*/
+    display: block;
+    /* padding: 28px 19px 0 19px; */
+    float: left;
+    width: calc(100% / 6);
 }
 
 
@@ -632,8 +634,8 @@ a:focus {
 }
 .books {
     padding-top: 40px;
-    margin: 0;
-    width: 100%;
+    /*margin: 0 -19px;*/
+    /*width: 100%;*/
 }
 /* tr td {
     padding: 10px;
