--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ body.scroll {
     width: 146px;
     height: 227px;
     top: 28px;
-    left: 19px;
+    left: 0;
     /*top:0;*/
     /*bottom: 0;*/
     /*left: 0;*/
@@ -411,9 +411,9 @@ a:focus {
 .book-item {
     position: relative;
     vertical-align: top;
-    /*text-align: center;*/
+    /* text-align: center; */
     display: block;
-    /* padding: 28px 19px 0 19px; */
+    padding: 28px 0 0 0;
     float: left;
     width: calc(100% / 6);
 }
